Day 8 and 9 updated

--- a/Project03_Day 07/index.html
+++ b/Project03_Day 07/index.html
@@ -19,10 +19,15 @@
                     <li>
 
                         <select>
-                            <option value="Explore Course"> Explore Course</option>
-                            <option value="HTML">HTML</option>
-                            <option value="CSS">CSS</option>
-                            <option value="JS">JS</option>
+                           <!-- <a href=""> <option value="Explore Course"> Explore Course</option></a>
+                           <a href=""> <option value="HTML"> HTML</option></a>
+                           <a href=""> <option value="CSS"> CSS</option></a>
+                           <a href=""> <option value="JS"> JS</option></a> -->
+
+
+                            <option value="HTML"><a href="">Course</a></option>
+                            <option value="CSS"><a href="">HTML</a></option>
+                            <option value="JS"><a href="">CSS</a></option>
                         </select>
 
 
