--- a/12 JS Async Promise/Async Fucntion/index.html
+++ b/12 JS Async Promise/Async Fucntion/index.html
@@ -6,12 +6,13 @@
     <title>Async Function</title>
 </head>
 <body>
-    <!-- <button onclick="handleClick()">Start</button> -->
+ <   <!-- <button onclick="handleClick()">Start</button> -->
     <p id="display"></p>
     <input type="text"/>
 
     <!-- to handle the funtion using only js -->
      <button id="btn">START</button>
     <script src="script.js"/>
+ 
 </body>
 </html>
